--- a/app/scss/android/_blocking_tab.scss
+++ b/app/scss/android/_blocking_tab.scss
@@ -44,8 +44,24 @@
 		text-transform: uppercase;
 	}
 
+	&.BlockingCategory__unknown:before {
+		content: "";
+		position: relative;
+		top: -1px;
+		display: block;
+		width: 100%;
+		height: 5px;
+		border-top: 1px solid $ghosty-blue;
+		border-bottom: 1px solid $ghosty-blue;
+	}
+
+	&.BlockingCategory__unknown .BlockingCategory__numBlocked,
+	&.BlockingCategory__unknown .BlockingSelectButton {
+		display: none;
+	}
+
 	.BlockingCategory__details {
-		min-height: 88px; // ToDo: Check This
+		min-height: 80px;
 		padding: 15px 12px;
 		cursor: pointer;
 	}
