--- a/app/scss/partials/_header.scss
+++ b/app/scss/partials/_header.scss
@@ -99,7 +99,6 @@
 	.dropdown-pane {
 		display: block;
 		width: 217px;
-		height: 364px;
 		border: none;
 		background-color: #4a4a4a;
 		top: 0px !important;
@@ -200,11 +199,7 @@
 
 		.account-info {
 			@extend %pointer;
-			position: absolute;
-			bottom: 0px;
-			left: 0;
-			padding: 16px;
-			width: 100%;
+			margin-top: 16px;
 			.signed-in-as {
 				padding-bottom: 0;
 				span {
