Add Help and About to PanelAndroid Settings Menu. UI Tweak for Settings and make clicking RadioButton Labels switch Radios.

--- a/app/scss/panel_android.scss
+++ b/app/scss/panel_android.scss
@@ -29,6 +29,7 @@
 
 // Panel Shared Component Styles
 @import './partials/_settings';
+@import './partials/_help';
 @import './partials/_radio_button';
 @import './partials/_not_scanned';
 @import './partials/_donut_graph';
