--- a/app/templates/debug_information.html
+++ b/app/templates/debug_information.html
@@ -5,6 +5,6 @@
 		<script src="../../dist/notifications.js" type="text/javascript"></script>
 	</head>
 	<body>
-		<p>Loading Debug Information...</p>
+		<p id="debug-information">Loading Debug Information...</p>
 	</body>
 </html>
