--- a/app/scss/hub.scss
+++ b/app/scss/hub.scss
@@ -31,6 +31,7 @@ html, body, #root {
 	.App__mainContent {
 		margin-left: 54px;
 	}
+	.android-relative {position: relative;}
 }
 
 // Foundation Overrides
