--- a/app/shared-components/ForgotPassword/ForgotPassword.scss
+++ b/app/shared-components/ForgotPassword/ForgotPassword.scss
@@ -37,7 +37,8 @@
 		margin: 40px auto;
 	}
 	.ForgotPasswordForm {
-		width: 420px;
+		max-width: 420px;
+		margin: 0 auto;
 	}
 	#ForgotPasswordMessage {
 		font-size: 1.25rem;
@@ -60,6 +61,9 @@
 	}
 	#send-button {
 		width: 150px;
+		@include breakpoint(medium down) {
+			width: 100px;
+		}
 	}
 }
 
