--- a/app/hub/Views/TutorialView/TutorialView.scss
+++ b/app/hub/Views/TutorialView/TutorialView.scss
@@ -149,8 +149,17 @@
 		left: 1%;
 		padding-right: 12%;
 		margin-bottom: 30px;
+		@media only screen and (max-width: 740px) {
+			left: auto;
+			padding-right: 0;
+		}
 	}
-	&.layout-detailed { left: -11%; }
+	&.layout-detailed {
+		left: -11%;
+		@media only screen and (max-width: 740px) {
+			left: auto;
+		}
+	}
 }
 @media only screen and (max-width: 960px) {
 	.TutorialLayoutView .TutorialView__tagline {
