add title to hub

--- a/app/templates/hub.html
+++ b/app/templates/hub.html
@@ -13,6 +13,7 @@
 -->
 <html>
 <head>
+<title>Ghostery Hub</title>
 <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 <meta content="utf-8" http-equiv="encoding">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
