Add and use mixin for button hover backgrounds in the hub

--- a/app/hub/Views/HomeView/HomeView.scss
+++ b/app/hub/Views/HomeView/HomeView.scss
@@ -16,14 +16,9 @@
 	padding-top: 45px;
 	padding-bottom: 25px;
 	color: $tundora;
+	// Foundation Overrides
 	.button {
-		&:not(.hollow):hover {
-			background-color: #0078CA;
-		}
-		&.hollow:hover {
-			color: #0078CA;
-			border-color: #0078CA;
-		}
+		@include button-hover-color-for($ghosty-blue-alt);
 	}
 }
 .HomeView--bolded {
