--- a/app/hub/Views/UpgradePlanView/UpgradePlanView.scss
+++ b/app/hub/Views/UpgradePlanView/UpgradePlanView.scss
@@ -381,6 +381,10 @@ section.home-template .section.section-pricing {
 			text-transform: none;
 			height: 38px;
 			line-height: 22px;
+			// Foundation Overrides
+			&.primary {
+				@include button-hover-color-for($price-blue);
+			}
 			&.already-protected {
 				@include breakpoint($medium-large-breakpoint down) {
 					margin-top: 45px;
@@ -550,10 +554,11 @@ section.home-template .section.section-pricing {
 		text-transform: none;
 		white-space: nowrap;
 		font-family: 'Open Sans';
-		background-color: $price-blue;
 		font-weight: 600;
-		&:hover {
-			background-color: $price-blue-hover;
+		background-color: $price-blue;
+		// Foundation Overrides
+		&.primary {
+			@include button-hover-color-for($price-blue);
 		}
 	}
 
