--- a/app/scss/partials/_colors.scss
+++ b/app/scss/partials/_colors.scss
@@ -41,6 +41,7 @@ $link-blue:					#2092BF; //primary-color
 $button-primary:			#3AA2CF;
 $dark-cyan-blue: 			#325e97; //insights modal border
 $baby-blue:					#DAF4FF; //plus-upgrade icon
+$dark-ghosty-blue: 			#0078CA; //button primary hover color in the hub
 
 /*  GREENS  */
 $spring-green:				#6aa103;
