--- a/app/scss/hub.scss
+++ b/app/scss/hub.scss
@@ -11,6 +11,9 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0
  */
 
+// Import Global Partials
+@import './partials/colors';
+
 html, body, #root {
 	height: 100%;
 	width: 100%;
@@ -41,6 +44,15 @@ html, body, #root {
 	line-height: 1.3;
 	text-transform: uppercase;
 	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.24), 0 0 2px 0 rgba(0, 0, 0, 0.12);
+	&.primary {
+		&:not(.hollow):hover {
+			background-color: $dark-ghosty-blue;
+		}
+		&.hollow:hover, &.hollow:focus {
+			border-color: $dark-ghosty-blue;
+			color: $dark-ghosty-blue;
+		}
+	}
 }
 
 // Helper Classes
