Rename anti tracking, ad blocking, smart blocking, ad block and ad block lists to their new names

--- a/app/hub/Views/TutorialView/TutorialView.scss
+++ b/app/hub/Views/TutorialView/TutorialView.scss
@@ -250,7 +250,7 @@
 	background-position: left 11.5px top 4px;
 }
 .TutorialAntiSuiteView__key .TutorialView__keyImage.smart-block {
-	background-image: buildSmartBlockingIcon(#1dafed);
+	background-image: buildSmartBrowsingIcon(#1dafed);
 	background-position: left 13.5px top 2px;
 }
 .TutorialAntiSuiteView__key .TutorialView__keyTitle {
