--- a/app/hub/Views/SetupViews/SetupAntiSuiteView/SetupAntiSuiteView.scss
+++ b/app/hub/Views/SetupViews/SetupAntiSuiteView/SetupAntiSuiteView.scss
@@ -63,12 +63,12 @@
 	background-image: buildAdBlockActiveIcon(#1dafed);
 }
 
-// Smart Blocking Icon
+// Smart Browsing Icon
 .SetupAntiSuite__feature .smart-blocking {
-	background-image: buildSmartBlockingIcon(#9f9f9f);
+	background-image: buildSmartBrowsingIcon(#9f9f9f);
 }
 .SetupAntiSuite__feature .smart-blocking.active {
-	background-image: buildSmartBlockingActiveIcon(#1dafed);
+	background-image: buildSmartBrowsingActiveIcon(#1dafed);
 }
 
 // Ghostery Rewards Icon
