Update smart blocking to smart browsing in a few more places

--- a/app/hub/Views/SetupViews/SetupAntiSuiteView/SetupAntiSuiteView.scss
+++ b/app/hub/Views/SetupViews/SetupAntiSuiteView/SetupAntiSuiteView.scss
@@ -64,10 +64,10 @@
 }
 
 // Smart Browsing Icon
-.SetupAntiSuite__feature .smart-blocking {
+.SetupAntiSuite__feature .smart-browsing {
 	background-image: buildSmartBrowsingIcon(#9f9f9f);
 }
-.SetupAntiSuite__feature .smart-blocking.active {
+.SetupAntiSuite__feature .smart-browsing.active {
 	background-image: buildSmartBrowsingActiveIcon(#1dafed);
 }
 
