Rename all variables from smartBlock -> smartBrowse, rename PolicySmartBlock.js to PolicySmartBrowse.js

--- a/app/hub/Views/TutorialView/TutorialView.scss
+++ b/app/hub/Views/TutorialView/TutorialView.scss
@@ -249,7 +249,7 @@
 	background-image: buildAdBlockIcon(#1dafed);
 	background-position: left 11.5px top 4px;
 }
-.TutorialAntiSuiteView__key .TutorialView__keyImage.smart-block {
+.TutorialAntiSuiteView__key .TutorialView__keyImage.smart-browse {
 	background-image: buildSmartBrowsingIcon(#1dafed);
 	background-position: left 13.5px top 2px;
 }
