--- a/app/scss/android/_overview_tab.scss
+++ b/app/scss/android/_overview_tab.scss
@@ -114,7 +114,7 @@
 				.CliqzFeature__status { color: $cliqz-feature--blue; }
 				.CliqzFeature__icon--anti-track { background-image: buildIconAntiTracking($cliqz-feature--blue); }
 				.CliqzFeature__icon--ad-block { background-image: buildIconAdBlocking($cliqz-feature--blue); }
-				.CliqzFeature__icon--smart-block { background-image: buildIconSmartBlocking($cliqz-feature--blue); }
+				.CliqzFeature__icon--smart-browse { background-image: buildIconSmartBrowsing($cliqz-feature--blue); }
 				.CliqzFeature__feature-name { color: $cliqz-feature--blue; }
 			}
 		}
@@ -124,7 +124,7 @@
 				.CliqzFeature__status { color: $cliqz-feature--gray; }
 				.CliqzFeature__icon--anti-track { background-image: buildIconAntiTracking($cliqz-feature--gray); }
 				.CliqzFeature__icon--ad-block { background-image: buildIconAdBlocking($cliqz-feature--gray); }
-				.CliqzFeature__icon--smart-block { background-image: buildIconSmartBlocking($cliqz-feature--gray); }
+				.CliqzFeature__icon--smart-browse { background-image: buildIconSmartBrowsing($cliqz-feature--gray); }
 				.CliqzFeature__feature-name { color: $cliqz-feature--gray; }
 			}
 		}
