--- a/extension-manifest-v2/app/scss/partials/_blocking_tracker.scss
+++ b/extension-manifest-v2/app/scss/partials/_blocking_tracker.scss
@@ -124,7 +124,7 @@
 			margin-right: 10px;
 			overflow-y: hidden;
 			@extend %nowrap;
-			&.unknown {
+			&.unidentified {
 				margin: 0 10px 0 0;
 				color: #4a4a4a;
 			}
@@ -148,7 +148,7 @@
 		}
 	}
 
-	.unknown-svg-container {
+	.unidentified-svg-container {
 		position: relative;
 		top: 3px;
 		width: 42px;
