Smart Browsing -> Smart-Browsing, add a dash

--- a/app/hub/Views/SetupViews/SetupAntiSuiteView/SetupAntiSuiteView.scss
+++ b/app/hub/Views/SetupViews/SetupAntiSuiteView/SetupAntiSuiteView.scss
@@ -63,7 +63,7 @@
 	background-image: buildAdBlockActiveIcon(#1dafed);
 }
 
-// Smart Browsing Icon
+// Smart-Browsing Icon
 .SetupAntiSuite__feature .smart-browsing {
 	background-image: buildSmartBrowsingIcon(#9f9f9f);
 }
