Update Anti-suite user-facing feature names

--- a/app/hub/Views/SetupViews/SetupAntiSuiteView/SetupAntiSuiteView.scss
+++ b/app/hub/Views/SetupViews/SetupAntiSuiteView/SetupAntiSuiteView.scss
@@ -55,7 +55,7 @@
 	background-image: buildAntiTrackingActiveIcon(#1dafed);
 }
 
-// Ad Block Icon
+// Ad-Blocking Icon
 .SetupAntiSuite__feature .ad-block {
 	background-image: buildAdBlockIcon(#9f9f9f);
 }
@@ -63,7 +63,7 @@
 	background-image: buildAdBlockActiveIcon(#1dafed);
 }
 
-// Smart Blocking Icon
+// Smart-Browsing Icon
 .SetupAntiSuite__feature .smart-blocking {
 	background-image: buildSmartBlockingIcon(#9f9f9f);
 }
