Use GHOSTERY_BASE_URL in StatsView.jsx

--- a/app/scss/partials/_stats.scss
+++ b/app/scss/partials/_stats.scss
@@ -254,6 +254,10 @@
 					font-weight: normal;
 				}
 			}
+			.pitch-learn-more {
+				display: flex;
+				justify-content: center;
+			}
 		}
 		.modal-buttons-container {
 			display: flex;
