--- a/extension-manifest-v2/app/scss/purplebox.scss
+++ b/extension-manifest-v2/app/scss/purplebox.scss
@@ -14,7 +14,7 @@
 @import './partials/_placeholders';
 @import './partials/_mixins';
 
-#ghostery-purple-box {
+#ghostery-tracker-tally {
 	@extend %reset;
 	@extend %noselect;
 	font-family: "Open Sans", "Roboto", Arial, Helvetica, sans-serif !important;
