--- a/extension-manifest-v2/app/scss/partials/_stats.scss
+++ b/extension-manifest-v2/app/scss/partials/_stats.scss
@@ -254,6 +254,11 @@
 					font-weight: normal;
 				}
 			}
+			.pitch-learn-more {
+				text-decoration: underline;
+				display: flex;
+				justify-content: center;
+			}
 		}
 		.modal-buttons-container {
 			display: flex;
