GH-2189: Learn More link takes you to Ghostery Image url instead of site (#625)
* Update Learn More link in the upgrade banner promo modal

* Change learn more link in PromoModals.jsx

* Change checkout page in Subscribe.jsx and Stats.jsx

* Update historical stats learn more link

* Remove / to make query params consistent

* Update link in Subscribe.jsx to use the GHOSTERY_BASE_URL and add back utm params

* Use GHOSTERY_BASE_URL in StatsView.jsx

* Underline learn more

* Add utm parameters to learn more link in StatsView.jsx

Co-authored-by: Ilya Zarembsky <ilya.zarembsky@gmail.com>
Co-authored-by: Christopher Tino <4699516+christophertino@users.noreply.github.com>

--- a/app/scss/partials/_stats.scss
+++ b/app/scss/partials/_stats.scss
@@ -254,6 +254,11 @@
 					font-weight: normal;
 				}
 			}
+			.pitch-learn-more {
+				text-decoration: underline;
+				display: flex;
+				justify-content: center;
+			}
 		}
 		.modal-buttons-container {
 			display: flex;
