--- a/app/hub/Views/PlanView/PlanView.scss
+++ b/app/hub/Views/PlanView/PlanView.scss
@@ -93,6 +93,8 @@
 
 .PlanView__plansContainer {
 	margin-top: 100px;
+	display: flex;
+	justify-content: center;
 }
 
 .PlanView__arrowDown {
@@ -103,4 +105,211 @@
 	border-left: 2px solid #00aef0;
 	border-top: 2px solid #00aef0;
 	cursor: pointer;
+}
+
+.PlanView__cardOuter {
+	flex-shrink: 3;
+	padding: 0 20px;
+	&-remove {
+		@include breakpoint(large up) {
+			padding-right: 0;
+		}
+		@include breakpoint($medium-large-breakpoint down) {
+			margin-top: rem-calc(90);
+		}
+	}
+}
+
+// Clean up unused CSS
+.PlanView__card {
+	padding-top: 150px;
+	height: 670px;
+	box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.5);
+	margin-bottom: rem-calc(40);
+	width: 250px;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	// padding-top: rem-calc(3);
+	padding-bottom: rem-calc(40);
+	@include breakpoint($medium-large-breakpoint down) {
+		box-shadow: none;
+		height: 425px;
+	}
+
+	@include breakpoint($medium-large-breakpoint down) {
+		&.basic {
+			height: 400px;
+		}
+		&.plus {
+			height: 498px;
+		}
+		&.premium {
+			height: 526px;
+		}
+	}
+	h2 {
+		color: $tundora;
+		font-family: "Roboto Condensed";
+		font-size: 18px;
+		font-weight: 400;
+		margin-top: 22px;
+		margin-bottom: 6px;
+	}
+	&-image-top {
+		margin-top: -76px;
+		width: 100%;
+	}
+	&-sub-header {
+		margin-bottom: rem-calc(15);
+	}
+	&-sub-copy {
+		display: flex;
+		align-items: center;
+		font-size: rem-calc(12);
+		margin-bottom: 8px;
+		text-align: left;
+		padding-left: rem-calc(35);
+		img {
+			padding-right: 10px;
+		}
+	}
+	.ghostery-free-image-container {
+		margin-top: -3px;
+		width: 250px;
+		height: 85px;
+		background-color: rgba(0, 174, 240, .25);
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		@include breakpoint($medium-large-breakpoint down) {
+			background-color: #FFF;
+		}
+		.ghostery-free-image {
+			width: 55px;
+			height: 65px;
+			background-image: url('/app/images/hub/upgrade/ghostery-basic-card.svg');
+			background-repeat: no-repeat;
+			background-position: center;
+		}
+	}
+	.ghostery-plus-image-container {
+			margin-top: -3px;
+			width: 250px;
+			height: 85px;
+			background-image: linear-gradient(to right, rgba(240,174,133,.25), rgba(241,216,158,.25));
+			@include breakpoint($medium-large-breakpoint down) {
+				background-image: none;
+				background-color: #FFF;
+			}
+		.ghostery-plus-image {
+			margin: auto;
+			width: 225px;
+			height: 87px;
+			background-image: url('/app/images/hub/upgrade/ghostery-plus-card.svg')
+		}
+	}
+	.ghostery-premium-image-container {
+		position: relative;
+	}
+	.ghostery-premium-image {
+		position: absolute;
+		margin-top: -79px;
+		margin-left: 9px;
+		width: 233px;
+		height: 161px;
+		background-image: url('/app/images/hub/upgrade/ghostery-premium-card.svg');
+	}
+	.ghostery-premium-image-background {
+		margin-top: -3px;
+		width: 250px;
+		height: 85px;
+		background-image: linear-gradient(to right, rgba(113,1,116,.25), rgba(90,37,142,.25) 18%, rgba(42,110,194,.25) 57%, rgba(12,156,227,.25) 86%, rgba(0,174,240,.25));
+		@include breakpoint($medium-large-breakpoint down) {
+			background-image: none;
+		}
+	}
+	.button {
+		margin-top: 10px;
+		margin-bottom: rem-calc(20);
+		text-transform: none;
+		height: 38px;
+		line-height: 22px;
+		&.already-protected {
+			@include breakpoint($medium-large-breakpoint down) {
+				margin-top: 45px;
+			}
+		}
+	}
+	.card-sub-header {
+		font-size: 14px;
+	}
+}
+
+.PlanView__price {
+	min-height: 85px;
+	margin-bottom: rem-calc(20);
+	&-blue {
+		color: $price-blue;
+	}
+	&-blue-alt {
+		color: $blue-alt;
+	}
+	&-gold {
+		color: $price-gold;
+	}
+	&-purple {
+		color: $price-purple;
+	}
+	p {
+		margin-bottom: 0;
+		@include breakpoint($medium-large-breakpoint down) {
+			&.sub-text:first-child {
+				margin-top: 4px;
+			}
+		}
+		&.sub-text {
+			font-weight: 500;
+		}
+	}
+	.price-per-year {
+		position: relative;
+		width: 100%;
+		p {
+			position: absolute;
+			width: 100%;
+		}
+	}
+}
+
+
+.PlanView__valuePropList {
+	margin: auto;
+	width: 174px;
+
+	&.basic {
+		width: 124px;
+	}
+}
+.PlanView__cardSubCopy {
+	display: flex;
+	justify-content: flex-start;
+	margin-bottom: 5px;
+}
+
+.check {
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+	background-repeat: no-repeat;
+	margin-top: 3px;
+	&.blue {
+		background-image: buildCheckIcon($price-blue);
+	}
+	&.yellow {
+		background-image: buildCheckIcon($price-gold);
+	}
+	&.purple {
+		background-image: buildCheckIcon($price-purple);
+	}
 }
