--- a/app/scss/hub.scss
+++ b/app/scss/hub.scss
@@ -97,3 +97,4 @@ html, body, #root {
 @import '../shared-components/ToggleCheckbox/ToggleCheckbox.scss';
 @import '../shared-components/ToggleSwitch/ToggleSwitch.scss';
 @import '../shared-components/ForgotPassword/ForgotPassword.scss';
+@import './partials/radio_button';
