Change CTA button to a button

--- a/app/hub/Views/PlanView/PlanView.scss
+++ b/app/hub/Views/PlanView/PlanView.scss
@@ -54,6 +54,8 @@
 }
 
 .PlanView__searchCTAButton {
+	display: flex;
+	justify-content: center;
 	margin: 48px auto 0 auto;
 	height: 44px;
 	width: 162px;
