--- a/app/hub/Views/BrowserCreateAccountView/BrowserCreateAccountView.scss
+++ b/app/hub/Views/BrowserCreateAccountView/BrowserCreateAccountView.scss
@@ -179,16 +179,19 @@ $color-create-account-form-error-red: #e74055;
 }
 .BrowserCreateAccountView__FAQContainer {
 	margin-top: 30px;
+	@include breakpoint(small down) {
+		text-align: center;
+	}
 }
 .BrowserCreateAccountView__faqItemContainer {
-	margin-bottom: 40px;
-	display: flex;
-	justify-content: center;
+	margin-bottom: 30px;
 }
 .BrowserCreateAccountView__faqIcon {
-	margin-right: 48px;
 	height: 71px;
 	width: 71px;
+	min-height: 71px;
+	min-width: 71px;
+	margin-bottom: 10px;
 }
 .BrowserCreateAccountView__faqItemTextContainer {
 	display: flex;
@@ -201,7 +204,7 @@ $color-create-account-form-error-red: #e74055;
 }
 .BrowserCreateAccountView__faqItemDescription {
 	margin-top: 10px;
-	width: 607px;
+	max-width: 607px;
 	font-size: 16px;
 	color: #4a4a4a;
 }
