--- a/app/hub/Views/BrowserCreateAccountView/BrowserCreateAccountView.scss
+++ b/app/hub/Views/BrowserCreateAccountView/BrowserCreateAccountView.scss
@@ -178,7 +178,8 @@ $color-create-account-form-error-red: #e74055;
 	}
 }
 .BrowserCreateAccountView__FAQContainer {
-	margin-top: 30px;
+	margin-top: 10px;
+	padding-top: 20px;
 	@include breakpoint(small down) {
 		text-align: center;
 	}
