--- a/app/scss/hub.scss
+++ b/app/scss/hub.scss
@@ -87,6 +87,7 @@ html, body, #root {
 @import '../hub/Views/CreateAccountView/CreateAccountView.scss';
 @import '../hub/Views/UpgradePlanView/UpgradePlanView.scss';
 @import '../hub/Views/BrowserCreateAccountView/BrowserCreateAccountView.scss';
+@import '../hub/Views/BrowserCreateAccountForm/BrowserCreateAccountForm.scss';
 @import '../hub/Views/BrowserLogInForm/BrowserLogInForm.scss';
 
 // Imports from ../shared-components directory
