Continued work on fleshing out the ghostery browser hub react app

--- a/app/templates/hub.html
+++ b/app/templates/hub.html
@@ -21,6 +21,17 @@
 </head>
 <body>
 	<div id="root"></div>
-	<script src="../../dist/hub_react.js"></script>
+	<script>
+		const body = document.getElementsByTagName('body')[0];
+		const js = document.createElement("script");
+
+		js.type = "text/javascript";
+		// if (true) js.src = '../../dist/hub_react.js';
+		// else js.src = '../../dist/hub_ghostery_browser_react.js'; //  TODO: update to point to hub
+
+		js.src = '../../dist/hub_ghostery_browser_react.js';
+
+		body.appendChild(js);
+	</script>
 </body>
 </html>
