Add error handling to legal consent label

--- a/app/hub/Views/BrowserCreateAccountForm/BrowserCreateAccountForm.scss
+++ b/app/hub/Views/BrowserCreateAccountForm/BrowserCreateAccountForm.scss
@@ -32,6 +32,13 @@
 		margin-top: 0;
 	}
 }
+.BrowserCreateAccountForm__legalConsentCheckedLabel {
+	font-size: 14px;
+
+	&.error {
+		color: red;
+	}
+}
 .BrowserCreateAccountForm__ctaButtonContainer {
 	display: flex;
 	justify-content: center;
