--- a/app/hub/Views/BrowserCreateAccountForm/BrowserCreateAccountForm.scss
+++ b/app/hub/Views/BrowserCreateAccountForm/BrowserCreateAccountForm.scss
@@ -30,6 +30,7 @@
 	color: red;
 }
 .BrowserCreateAccountForm__promoString {
+	font-size: 14px;
 	margin-top: 15px;
 	@include breakpoint(small down) {
 		margin-top: 0;
@@ -37,6 +38,9 @@
 }
 .BrowserCreateAccountForm__legalConsentCheckedLabel {
 	font-size: 14px;
+	@include breakpoint(small down) {
+		width: 258px;
+	}
 
 	&.error {
 		color: red;
