Add handlers for forgot password and throttle it

--- a/app/hub/Views/BrowserLoginForm/BrowserLogInForm.scss
+++ b/app/hub/Views/BrowserLoginForm/BrowserLogInForm.scss
@@ -64,6 +64,11 @@
 	font-size: 14px;
 	line-height: 30px;
 }
+.BrowserLogInForm__forgotPassword {
+	color: $ghosty-blue;
+	text-decoration: underline;
+	cursor: pointer;
+}
 .BrowserLogInForm__button {
 	min-width: 180px;
 }
