Make updates checkbox work

--- a/app/hub/Views/BrowserLoginForm/BrowserLogInForm.scss
+++ b/app/hub/Views/BrowserLoginForm/BrowserLogInForm.scss
@@ -47,7 +47,7 @@
 }
 .BrowserLogInForm__inputBox.error {
 	margin-bottom: 8px;
-	border-color: #e74055;
+	border: 2px solid #e74055;
 }
 .BrowserLogInForm__inputBox:focus {
 	// Foundation Overrides
