--- a/app/hub/Views/BrowserCreateAccountView/BrowserCreateAccountView.scss
+++ b/app/hub/Views/BrowserCreateAccountView/BrowserCreateAccountView.scss
@@ -14,6 +14,53 @@
 $color-create-account-form-error-red: #e74055;
 
 // Browser Create Account View
+.BrowserCreateAccountView {
+	padding-top: 80px;
+	padding-bottom: 40px;
+}
+.BrowserCreateAccountView__alreadySignedIn {
+	margin-top: 245px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+.BrowserCreateAccountView__email {
+	font-size: 24px;
+	color: $ghosty-blue;
+}
+.BrowserCreateAccountView__ctaButtonContainer {
+	display: flex;
+	justify-content: center;
+
+	.BrowserCreateAccountView__ctaButton {
+		margin: 48px auto 0 auto;
+		height: 44px;
+		width: 162px;
+		padding: 7.7px 14px;
+		line-height: 22px;
+		background: linear-gradient(
+			45deg,
+			#ff7e74 50%,
+			#00aef0
+		);
+		background-size: 200% 100%;
+		background-position: 100% 50%;
+		transition: 0.25s all;
+		border: none;
+		&:hover {
+			background-position: 0% 50%;
+			transition: 0.25s all;
+		}
+		color: #FFF;
+		font-size: 14.1px;
+		font-weight: 700;
+		border-radius: 3.5px;
+		text-align: center;
+		line-height: 2.05;
+		cursor: pointer;
+	}
+}
 .BrowserCreateAccountView__title {
 	display: flex;
 	justify-content: center;
@@ -32,10 +79,6 @@ $color-create-account-form-error-red: #e74055;
 	color: $ghosty-blue;
 	text-decoration: underline;
 	cursor: pointer;
-}
-.BrowserCreateAccountView {
-	padding-top: 80px;
-	padding-bottom: 40px;
 }
 .BrowserCreateAccountView--addMarginSide {
 	margin-left: 10px;
