--- a/app/hub/Views/BrowserCreateAccountView/BrowserCreateAccountView.scss
+++ b/app/hub/Views/BrowserCreateAccountView/BrowserCreateAccountView.scss
@@ -66,6 +66,11 @@ $color-create-account-form-error-red: #e74055;
 	justify-content: center;
 	font-size: 24px;
 	font-weight: 600;
+	@include breakpoint(small down) {
+		margin: auto;
+		max-width: 237px;
+		text-align: center;
+	}
 }
 .BrowserCreateAccountView__subtitle {
 	margin-top: 10px;
@@ -73,6 +78,12 @@ $color-create-account-form-error-red: #e74055;
 	justify-content: center;
 	font-size: 18px;
 	text-align: center;
+	@include breakpoint(small down) {
+		margin: auto;
+		max-width: 237px;
+		text-align: center;
+		line-height: 2.33;
+	}
 }
 .BrowserCreateAccountView__alreadyHaveAccount {
 	margin-top: 38px;
