Add image and adjust spacing

--- a/app/hub/Views/BrowserSuccessView/BrowserSuccessView.scss
+++ b/app/hub/Views/BrowserSuccessView/BrowserSuccessView.scss
@@ -13,23 +13,23 @@
 }
 
 .BrowserSuccessView__subtitle {
-	margin-bottom: 20px;
+	margin-bottom: 47px;
 	width: 392px;
 	font-size: 18px;
 	line-height: 2.33;
 	text-align: center;
 }
 
-.BrowserSuccessView__rocketShip {
-	margin-bottom: 84px;
-	height: 330px;
+.BrowserSuccessView__ghosterySuite {
+	margin-bottom: 77px;
+	height: 298px;
 	width: 545px;
 }
 
 .BrowserSuccessView__ctaButton {
 	display: flex;
 	justify-content: center;
-	margin: 48px auto 0 auto;
+	margin: auto;
 	height: 44px;
 	width: 162px;
 	padding: 7.7px 14px;
